--- a/src/config.ini
+++ b/src/config.ini
@@ -1,164 +1,62 @@
-;**********SU1X CONFIG FILE**********
-;************************************
-;************************************
-;*
-;**********WIRELESS**********
-;*
 [su1x]
-;Wireless 1X configuration. wireless = 1.
 wireless = 1
-;set postion of the profile. 0 = highest priority, descending
 priority = 0
-;Default Profile - exported xml profile file location
-xmlfile = "wireless.xml"
-;Additional xml profile (for use if wpa2 not supported)
-xmlfile_wpa = "wireless-wpa.xml"
-;Fallback to WPA? try additional profile if xml profile one fails. 0 never try, 1 try.
-tryadditional = 1
-;Second profile (if two ssids, ie a wpa profile and a wpa2 profile with different ssid)
-xmlfile_additional = "wireless-wpa.xml"
-;Configure multiple profile? 1=yes, 0=no. If yes, xmlfile profile is set highest priority
-;and xmlfile_additional is set to second highest priority 
-tryadditional_profile = 0
-;SSID for second profile found in getprofile section below. You MUST specify the second SSID.
-;
+network = "Airborne"
+;xmlfile = "wireless.xml"
+;xmlfile_wpa = "wireless-wpa.xml"
+;tryadditional = 1
+;xmlfile_additional = "wireless-wpa2.xml"
+;tryadditional_profile = 0
 ;***Windows Vista/7 specific profile
-;***Windows vista/7 does not need blob in xml, xp does. More settings available in 7.
-;***
-;exported xml profile file location for win vista/7 specific config
-xmlfile7 = "wireless-7.xml"
-;additional xml profile (for use if wpa2 not support for example)
-xmlfile7_wpa = "wireless-wpa.xml"
-;try win 7 profile instead of default profile. 0 never try, 1 try.
-win7 = 0
+;xmlfile7 = "wireless-7.xml"
+;xmlfile7_wpa = "wireless-wpa.xml"
+;win7 = 1
 ;***XP SP2 Profile
-;exported xml profile file location for winxp sp2 (may need sperate conf as result of xpsp2 bugs)
-xmlfilexpsp2 = "wireless-sp2.xml"
-;Schedule Task for tool popup on reauth (used to catch username resets)
-scheduletask = 1
-;*
-;**********WIRED**********
-;*
-;Wired 1X configuration. wired = 1 for wired.
-wired = 0
-;Wired 8021x profile
-wiredXMLfile  = "Wired_Profile.xml"
-;*
-;**********GENERIC CONFIG**********
-;*
-;set Debug to 2 for verbose popup errors messages, or 1 for debug to file. 
-DEBUG=0
-;set hint to 1 for hint box at end of config
-hint = 1
-;proxy settings config. 0 = do nothing, 1 = automatically detect settings
-proxy = 0
-;browser reset will restart the IE or FireFox process if 1
-browser_reset = 0
-;*
-;**********GUI/TEXT**********
-;*
-;text to show in Edit box on program start
-startText = "Swansea Wireless Internet Service:"
-;text to show on title bar of application
-title =  "SWIS Eduroam - Setup Tool"
-;example username to display in hint window
-username = "123456@swansea.ac.uk"
-;Show Username / Password text inputs (0 = no)
-showup = 1
-;Show Password tick box
-showtick = 1
-;*
-;**********NAP/SoH**********
-;*
-;Secure machine will do security checks
-SECURE_MACHINE = 0 
-;Use Splash will display a image at the end of the installation
-USESPLASH = 0
-;Enable NAP
-nap = 1
-;*
-;**********PRINTING**********
-;*
-[print]
-;Printing tab visible
-printing = 0
-;printer name
-prtiner = "Swansea Uni Wireless"
-;printer model xp
-printer_xp = "HP LaserJet 4000 SERIES PCL6"
-;printer model vista
-printer_vista = "HP LaserJet 4000 SERIES PCL6"
-;printer model win7
-printer_7 = "HP LaserJet P4515 PCL6"
-;printer port 
-printer_port = "http://ccs-iprint1.singleton.swan.ac.uk/ipps/P_iLIS_SWIS"
-;printer message
-printer_message = "When prompted for your username/password, use your wireless username WITHOUT the '@swansea.ac.uk' part."
-;printer message title
-printer_message_title = "Username Password"
-;*
-;**********SUPPORT**********
-;*
-[support]
-;show support tab
-show_support = 1
-;Send Support dept name used when users prompted to agree to send data
-sendsupport_dept = "LIS"
-;send ldap test data (DO NOT USE, EXPERIMENTAL)
-send_ldap = 1
-;send problem form data (DO NOT USE, EXPERIMENTAL)
-send_problem = 1
-;dump support data to file? su1x-dump-<date>.txt
-dump_to_file = 1
-;SUPPORT DATA sent via HTTPS. See support PHP values for guide to build custom PHP scripts to use with data
-;URL to send ldap test (must be HTTPS with valid cert)
-ldap_url = "https://swis.swan.ac.uk/logintest.php"
-;Registration test URL - see web_support.txt file
-regtest_url = "https://swis.swan.ac.uk/regtest.php"
-;Supoprt Email URL - see web_support.txt
-sendsupport_url = "https://swis.swan.ac.uk/sendsupport.php"
-;
-;*
-;**********SSID DATA FOR GET PROFILE AND SU1X TOOL**********
-;*
-[getprofile]
-;The SSID to work with, or if wired the service name
-ssid="eduroam"
-;The Fallback SSID to use for support fucntions
-ssid_fallback="eduroam-setup"
-;The additional SSID to work with, or if wired the service name
-ssid_additional="eduroam-wpa"
-;*
-;**********IMAGES**********
-;*
-[images]
-;location of banner image of size 295x60
-BANNER="images\jrs-header.jpg"
-;location of splash file
-SPLASHFILE="images\big.jpg"
-;image used for win xp in hint window 373x135
-bubblexp= "images\bubble1.jpg"
-;image used for win vista and win7 in hint window 374x59
-bubblevista="images\bubble-vista.jpg"
-;image used for win xp connected successfully
-bubble_xp_connected = "images\bubble-connected-xp.jpg"
-;image used for win 7 connected successfully
-win7_connected = "images\connected-7.jpg"
-;vista connected successfully
-vista_connected = "images\connected-vista.jpg"
-;*
-;**********REMOVE BUTTON**********
-;*
-[remove]
-;new config iteration function requires unique keynames
-ssid1 = "eduroam" 
-ssid2 = "eduroam-setup"
+;xmlfilexpsp2 = "wireless-sp2.xml"
 
-;*
-;**********CERTIFICATES**********
-;*
+wired = 0
+DEBUG=2
+hint = 1
+proxy = 0
+browser_reset = 0
+startText = "Amarantis Airborne: Vul je gebruikersnaam en wachtwoord in met @amarantis.nl op het einde."
+title =  "Airborne - Setup Tool"
+username = "123456@amarantis.nl"
+showup = 1
+showtick = 1
+USESPLASH = 1
+;***NAP
+SECURE_MACHINE = 0
+nap = 0
+
+[print]
+printing = 0
+
+[support]
+show_support = 1
+send_ldap = 0
+send_problem = 0
+dump_to_file = 1
+
+[getprofile]
+ssid1="AAirborne"
+ssid2="Airborne"
+
+[images]
+BANNER="images\su1x-header.jpg"
+SPLASHFILE="images\big.jpg"
+bubblexp= "images\bubble1.jpg"
+bubblevista="images\bubble-vista.jpg"
+bubble_xp_connected = "images\bubble-connected-xp.jpg"
+win7_connected = "images\connected-7.jpg"
+vista_connected = "images\connected-vista.jpg"
+
+[remove]
+removessid=2
+ssid1="Airborne"
+ssid2="Airborne Instructies"
+ssid3="AAirborne"
+
 [certs]
-;install a cert
 usecert=1
-;destination of certificate file to install (.der or .cer)
-cert="CamfordCA.der"
+cert="AmarantisCA.der"
