made changes to config for priority on adding profiles. using set priority during installation seems more error prone.

--- a/src/config.ini
+++ b/src/config.ini
@@ -15,7 +15,7 @@ network = "Airborne"
 ;xmlfilexpsp2 = "wireless-sp2.xml"
 
 wired = 0
-DEBUG=2
+DEBUG=0
 hint = 1
 proxy = 0
 browser_reset = 0
@@ -39,8 +39,16 @@ send_problem = 0
 dump_to_file = 1
 
 [getprofile]
-ssid1="AAirborne"
-ssid2="Airborne"
+; priority of the networks is determined by the
+; position of the line in this section. the network
+; at the bottom receives top priority. 
+ssid1="Airborne"
+ssid2="AAirborne"
+
+[remove]
+ssid1="Airborne"
+ssid2="Airborne Instructies"
+ssid3="AAirborne"
 
 [images]
 BANNER="images\su1x-header.jpg"
@@ -50,12 +58,6 @@ bubblevista="images\bubble-vista.jpg"
 bubble_xp_connected = "images\bubble-connected-xp.jpg"
 win7_connected = "images\connected-7.jpg"
 vista_connected = "images\connected-vista.jpg"
-
-[remove]
-removessid=2
-ssid1="Airborne"
-ssid2="Airborne Instructies"
-ssid3="AAirborne"
 
 [certs]
 usecert=1
