added messages to config.ini replaced some fixed messages with messages from config.ini changed gui setup

--- a/src/config.ini
+++ b/src/config.ini
@@ -15,7 +15,7 @@ network = "Airborne"
 ;xmlfilexpsp2 = "wireless-sp2.xml"
 
 wired = 0
-DEBUG=2
+DEBUG=1
 hint = 1
 proxy = 0
 browser_reset = 0
@@ -50,7 +50,7 @@ ssid2="Airborne Instructies"
 ssid3="AAirborne"
 
 [images]
-BANNER="images\su1x-header.jpg"
+BANNER="images\lis-header.jpg"
 SPLASHFILE="images\big.jpg"
 bubblexp= "images\bubble1.jpg"
 bubblevista="images\bubble-vista.jpg"
@@ -61,3 +61,20 @@ vista_connected = "images\connected-vista.jpg"
 [certs]
 usecert=1
 cert="AmarantisCA.der"
+
+[messages]
+head = "Voer bij gebruikersnaam je ov-nummer of lettercode in met '@amarantis.nl' erachter"
+user = "Gebruikersnaam:"
+pass1 = "Wachtwoord:"
+pass2 = "Wachtwoord nogmaals:" 
+show_pass = "Toon wachtwoord"
+progress = "Voortgang"
+start_check = "Tests en Controles"
+remove_wifi = "Verwijder configuraties"
+error_user = "ERROR: Voer een geldige gebruikersnaam in"
+error_pass = "ERROR: Voer een wachtwoord in"
+error_wifiadapter = "***ERROR: Geen draadloze adapter gevonden***"
+error_setup_complete = ***Installatie klaar***"
+error_setup_problem = ***WAARSCHIJNLIJK EEN PROBLEEM MET CONNECTIE"
+error_removeprofiles = "Geen draadloos profiel gevonden om te vewijderen"
+error_removeprofiles = "Je bent nu verbonden met "
