added message for password difference

--- a/src/config.ini
+++ b/src/config.ini
@@ -62,6 +62,7 @@ start_check = "Tests en Controles"
 remove_wifi = "Verwijder configuraties"
 error_user = "ERROR: Voer een geldige gebruikersnaam in"
 error_pass = "ERROR: Voer een wachtwoord in"
+error_passdiff = "ERROR: Wachtwoorden zijn niet gelijk"
 error_wifiadapter = "***ERROR: Geen draadloze adapter gevonden***"
 error_setup_complete = ***Installatie klaar***"
 error_setup_problem = ***WAARSCHIJNLIJK EEN PROBLEEM MET CONNECTIE"
