fixed wrong connected msg cleanup of update progress values

--- a/src/config.ini
+++ b/src/config.ini
@@ -67,4 +67,4 @@ error_wifiadapter = "***ERROR: Geen draadloze adapter gevonden***"
 error_setup_complete = ***Installatie klaar***"
 error_setup_problem = ***WAARSCHIJNLIJK EEN PROBLEEM MET CONNECTIE"
 error_removeprofiles = "Geen draadloos profiel gevonden om te vewijderen"
-error_removeprofiles = "Je bent nu verbonden met "
+error_connectedto = "Je bent nu verbonden met "
