added open support url function

--- a/src/config.ini
+++ b/src/config.ini
@@ -25,6 +25,7 @@ printing = 0
 show_support = 1
 send_ldap = 0
 send_problem = 0
+sendsupport_url=http://google.com
 
 [getprofile]
 ; priority of the networks is determined by the
